# scripthookv_template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  script.cpp  script.h
